# pidgin-autostatus

./: CMakeLists.txt  ChangeLog  autostatus.c  autostatus.config
